random-examples/portfolio.yaml
apiVersion: v1
kind: Pod
metadata:
  name: portfolio
spec:
  containers:
  - image: vonsalumbides/portfolio
    name: portfolio
    ports:
    - containerPort: 80
