random-examples/web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - image: nginx
    name: web
    ports:
    - containerPort: 8080
      protocol: TCP
