random-examples/portfolio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https  
  selector:
    app: web
  type: LoadBalancer
